--- a/customhttp.yaml
+++ b/customhttp.yaml
@@ -1,10 +1,7 @@
 customHeaders:
   # =============================================================================
   # SECURITY HEADERS CONFIGURATION FOR AWS AMPLIFY
-  # Last Updated: 2024-12-20
-  # 
-  # NOTE: This file is safe to keep in public repos - it contains policies, 
-  # not secrets. Attackers can view these headers in browser DevTools anyway.
+  # Last Updated: 2025-12-21
   # =============================================================================
 
   # 1. GLOBAL HEADERS - Applied to ALL routes
@@ -18,14 +15,14 @@ customHeaders:
       
       # ---------------------------------------------------------------------
       # CONTENT SECURITY POLICY (CSP)
-      # This is your PRIMARY defense against XSS and injection attacks
+      # XSS and injection attacks
       # ---------------------------------------------------------------------
       - key: 'Content-Security-Policy'
-        value: "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://*.g.doubleclick.net; img-src 'self' data: https://www.google-analytics.com https://*.githubusercontent.com; style-src 'self' 'unsafe-inline'; font-src 'self' data:; object-src 'none'; base-uri 'self'; frame-ancestors 'self'; form-action 'self'; upgrade-insecure-requests;"
+        value: "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://www.google-analytics.com https://analytics.google.com https://*.g.doubleclick.net; img-src 'self' data: https://www.google-analytics.com https://*.githubusercontent.com https://unpkg.com; style-src 'self' 'unsafe-inline'; font-src 'self' data:; object-src 'none'; base-uri 'self'; frame-ancestors 'self'; form-action 'self'; upgrade-insecure-requests;"
       
       # ---------------------------------------------------------------------
       # ANTI-CLICKJACKING / FRAMING PROTECTION
-      # Prevents your site from being embedded in malicious iframes
+      # malicious iframes
       # ---------------------------------------------------------------------
       - key: 'X-Frame-Options'
         value: 'SAMEORIGIN'
@@ -41,48 +38,42 @@ customHeaders:
       
       # ---------------------------------------------------------------------
       # CONTENT TYPE / MIME SNIFFING PROTECTION
-      # Prevents browsers from MIME-sniffing content
-      # ---------------------------------------------------------------------
+      #       # ---------------------------------------------------------------------
       - key: 'X-Content-Type-Options'
         value: 'nosniff'
       
       # ---------------------------------------------------------------------
-      # XSS PROTECTION (Legacy but still useful for older browsers)
+      # XSS PROTECTION (Legacy)
       # ---------------------------------------------------------------------
       - key: 'X-XSS-Protection'
         value: '1; mode=block'
       
       # ---------------------------------------------------------------------
       # REFERRER POLICY
-      # Controls what information is sent in the Referer header
       # ---------------------------------------------------------------------
       - key: 'Referrer-Policy'
         value: 'strict-origin-when-cross-origin'
       
       # ---------------------------------------------------------------------
       # PERMISSIONS POLICY (formerly Feature-Policy)
-      # Disables browser features you don't need - reduces attack surface
       # ---------------------------------------------------------------------
       - key: 'Permissions-Policy'
         value: 'camera=(), microphone=(), geolocation=(), payment=(), usb=(), bluetooth=(), magnetometer=(), gyroscope=(), accelerometer=(), interest-cohort=()'
       
       # ---------------------------------------------------------------------
       # DNS PREFETCH CONTROL
-      # Performance optimization - helps resolve external links faster
-      # ---------------------------------------------------------------------
+      #  ---------------------------------------------------------------------
       - key: 'X-DNS-Prefetch-Control'
         value: 'on'
       
       # ---------------------------------------------------------------------
       # CACHE CONTROL FOR SECURITY
-      # Prevents sensitive pages from being cached inappropriately
       # ---------------------------------------------------------------------
       - key: 'X-Permitted-Cross-Domain-Policies'
         value: 'none'
 
       # ---------------------------------------------------------------------
-      # FUN / BRANDING HEADERS
-      # Easter eggs for fellow developers who check response headers
+      # BRANDING HEADERS
       # ---------------------------------------------------------------------
       - key: 'X-Recruiting'
         value: 'Like heady toppers? Contact eric@medev.ai'
@@ -92,7 +83,6 @@ customHeaders:
         value: 'Lollipop kids, umpa lumpas, and death magnetic puppet masters'
 
   # 2. NEXT.JS DATA & API ROUTES (SEO Hygiene)
-  # Prevents Google from indexing raw JSON data or API responses as search results
   - pattern: '**/*.json'
     headers:
       - key: 'X-Robots-Tag'
@@ -101,14 +91,12 @@ customHeaders:
         value: 'public, max-age=0, must-revalidate'
 
   # 3. SAFETY VALVE: Service Worker & Manifest
-  # NEVER cache these. If you do, you can't update your app for users.
   - pattern: '**/{service-worker.js,manifest.json}'
     headers:
       - key: 'Cache-Control'
         value: 'public, max-age=0, must-revalidate'
 
   # 4. STATIC ASSETS (Long-term Caching)
-  # Note: Removed .json from here to handle it separately above
   - pattern: '**/*.{js,css,png,jpg,jpeg,gif,ico,svg,woff,woff2,webp,avif}'
     headers:
       - key: 'Cache-Control'
