--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.4",
     "@types/three": "^0.181.0",
     "framer-motion": "^12.23.24",
     "globe.gl": "^2.45.0",
     "lucide-react": "^0.554.0",
     "next": "^16.0.10",
+    "nodemailer": "^7.0.12",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^2.12.7",
