--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/three": "^0.181.0",
     "framer-motion": "^12.23.24",
     "globe.gl": "^2.45.0",
+    "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.554.0",
     "next": "^16.0.10",
     "nodemailer": "^7.0.12",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^2.12.7",
+    "rss": "^1.2.2",
+    "rss-parser": "^3.13.0",
     "three": "^0.181.2"
   },
   "devDependencies": {
@@ -26,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/rss": "^0.0.32",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
