--- a/customhttp.yaml
+++ b/customhttp.yaml
@@ -1,3 +1,12 @@
+# Redirect non-www to www for all routes
+redirects:
+  - source: "https://medev.ai"
+    target: "https://www.medev.ai"
+    status: "301"
+  - source: "https://medev.ai/<*>"
+    target: "https://www.medev.ai/<*>"
+    status: "301"
+
 customHeaders:
   - pattern: '**/*'
     headers:
