--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/three": "^0.181.0",
     "framer-motion": "^12.23.24",
     "globe.gl": "^2.45.0",
+    "gsap": "^3.14.2",
     "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.554.0",
     "next": "^16.0.10",
